--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <div id="main">
+    <div id="page1"></div>
+  </div>
   <script src="./script.js"></script>
 </body>
 </html>
