--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"
     integrity="sha512-Ic9xkERjyZ1xgJ5svx3y0u3xrvfT/uPkV99LBwe68xjy/mGtO+4eURHZBW2xW4SZbFrF1Tf090XqB+EVgXnVjw=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <!-- Locomotive scroll -->
+  <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
+  <!-- Script -->
   <script src="./script.js"></script>
 </body>
 
